# programmingLanguageFirstImplementation

./: .gitignore  CMakeLists.txt  main.cpp
src/error/: ConsoleErrorPrinter.cpp  ConsoleErrorPrinter.h  ErrorPrinter.cpp  ErrorPrinter.h  MockErrorPrinter.cpp  MockErrorPrinter.h
src/error/exceptions/: ConstReassignment.h  ExpectedXBeforeY.h  InvalidLValue.h  UndeclaredVariable.h  UninitializedConst.h  VariableRedeclaration.h
src/interpreter/: Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h
src/interpreter/controlFlowExceptions/: Return.h
src/interpreter/nativeFunctions/: ClockFunction.cpp  ClockFunction.h
src/interpreter/runtimeValues/: BooleanValue.h  Callable.h  Function.h  NullValue.h  NumericValue.h  RuntimeValue.h  StringValue.h  ValueType.cpp  ValueType.h
src/lexer/: Keywords.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenType.h
src/parser/: NodeType.h  Parser.cpp  Parser.h
src/parser/ast/: AssignmentExpression.h  BinaryExpression.h  BooleanLiteral.h  CallExpression.h  Expression.h  GroupingExpression.h  Identifier.h  LogicalExpression.h  NullLiteral.h  NumericLiteral.h  Program.h  Statement.h  StringLiteral.h  UnaryExpression.h
src/parser/ast/statements/: BlockStatement.h  ExprStatement.h  FunctionDeclaration.h  IfStatement.h  PrintStatement.h  ReturnStatement.h  VarDeclaration.h  WhileStatement.h
src/parser/resolver/: Resolver.cpp  Resolver.h
src/parser/visitor/: AstPrinter.h  Visitor.h
src/visitor/: Visitor.h
tests/: BypassExpressionStatement.h  CMakeLists.txt  EnvironmentTest.cpp  InterpreterBinaryExpressionTest.cpp  InterpreterBlockTest.cpp  InterpreterConditionalsTest.cpp  InterpreterFunctionTest.cpp  InterpreterLiteralTest.cpp  InterpreterLogicalOperatorsTest.cpp  InterpreterLoopTest.cpp  InterpreterUnaryTest.cpp  InterpreterVarAssignmentTest.cpp  InterpreterVarDeclarationTest.cpp  InterpreterWhileLoopTest.cpp  LexerTest.cpp  ParserBlockTest.cpp  ParserConditionalsTest.cpp  ParserFunctionTest.cpp  ParserLogicalExpressionTest.cpp  ParserLoopTest.cpp  ParserTest.cpp  ParserVarAssignmentTest.cpp  ParserVarDeclarationTest.cpp  ParserWhileLoopTest.cpp  TempTest.cpp
