project(tests)
add_subdirectory(lib/Catch2)

add_executable(tests LexerTest.cpp ../src/error/ErrorPrinter.cpp ../src/lexer/Lexer.cpp ../src/error/MockErrorPrinter.cpp ../src/error/MockErrorPrinter.h ParserTest.cpp ../src/parser/Parser.cpp ../src/interpreter/Interpreter.cpp ../src/interpreter/runtimeValues/ValueType.cpp ../src/interpreter/Environment.cpp InterpreterLiteralTest.cpp InterpreterUnaryTest.cpp InterpreterBinaryExpressionTest.cpp ParserVarDeclarationTest.cpp InterpreterVarDeclarationTest.cpp EnvironmentTest.cpp ParserVarAssignmentTest.cpp InterpreterVarAssignmentTest.cpp ParserBlockTest.cpp BypassExpressionStatement.h InterpreterBlockTest.cpp ParserConditionalsTest.cpp InterpreterConditionalsTest.cpp ParserLogicalExpressionTest.cpp InterpreterLogicalOperatorsTest.cpp ParserWhileLoopTest.cpp InterpreterWhileLoopTest.cpp)
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)